mobile version update

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <div class="buttons">
         <button class="start">Start</button>
-        <button class="reset">Reset</button>
+        <!-- <button class="reset">Reset</button> -->
       </div>
     </div>
 
